--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1",
+    "query-string": "^6.1.0",
     "redis": "^2.8.0",
     "serve-favicon": "^2.5.0",
     "should": "^13.2.3"
