--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "hbs": "~4.0.1",
     "helmet": "^3.13.0",
     "http-errors": "~1.6.2",
+    "i18n-express": "^1.1.3",
     "lodash": "^4.17.10",
     "mongoose": "^5.2.7",
     "mongoose-morgan": "^1.0.4",
