--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-graphql": "^0.6.12",
     "express-limiter": "^1.6.1",
     "express-session": "^1.15.6",
+    "express-sse": "^0.5.0",
     "express-status-monitor": "^1.1.5",
     "graphql": "^0.13.2",
     "hbs": "~4.0.1",
