--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "connect-mongo": "^2.0.1",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.4",
     "csurf": "^1.9.0",
@@ -19,11 +20,14 @@
     "express-session": "^1.15.6",
     "express-sse": "^0.5.0",
     "express-status-monitor": "^1.1.5",
+    "flat-cache": "^1.3.0",
     "graphql": "^0.13.2",
     "hbs": "~4.0.1",
     "helmet": "^3.13.0",
     "http-errors": "~1.6.2",
     "i18n-express": "^1.1.3",
+    "joi": "^13.6.0",
+    "jsonpath": "^1.0.0",
     "lodash": "^4.17.10",
     "mongoose": "^5.2.7",
     "mongoose-morgan": "^1.0.4",
