--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-sse": "^0.5.0",
     "express-status-monitor": "^1.1.5",
     "flat-cache": "^1.3.0",
+    "glob": "^7.1.2",
     "graphql": "^0.13.2",
     "hbs": "~4.0.1",
     "helmet": "^3.13.0",
