--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "compression": "^1.7.3",
     "connect-mongo": "^2.0.1",
+    "connect-rid": "0.0.1",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.4",
     "csurf": "^1.9.0",
@@ -20,6 +22,7 @@
     "express-session": "^1.15.6",
     "express-sse": "^0.5.0",
     "express-status-monitor": "^1.1.5",
+    "express-validator": "^5.3.0",
     "flat-cache": "^1.3.0",
     "glob": "^7.1.2",
     "graphql": "^0.13.2",
@@ -39,6 +42,7 @@
     "passport-local-mongoose": "^5.0.1",
     "query-string": "^6.1.0",
     "redis": "^2.8.0",
+    "response-time": "^2.3.2",
     "serve-favicon": "^2.5.0",
     "should": "^13.2.3",
     "uuid": "^3.3.2"
